parser_tlaloc.output
State 54 conflicts: 1 shift/reduce
State 61 conflicts: 1 reduce/reduce
State 62 conflicts: 2 shift/reduce
State 63 conflicts: 2 shift/reduce


Grammar

    0 $accept: tlaloc $end

    1 $@1: /* empty */

    2 $@2: /* empty */

    3 tlaloc: PROGRAM ID $@1 DOS_PUNTOS vars $@2 metodo metodo_main END PROGRAM

    4 vars: vars vars_def
    5     | /* empty */

    6 $@3: /* empty */

    7 $@4: /* empty */

    8 vars_def: DEFINE declaracion $@3 AS tipo $@4 asignacion_var PUNTO

    9 declaracion: APUNTADOR ID
   10            | ID

   11 params: APUNTADOR ID
   12       | ID

   13 $@5: /* empty */

   14 params: ID $@5 dimension_arreglo

   15 tipo: INTEGER
   16     | STRING
   17     | BOOLEAN
   18     | DECIMAL
   19     | VOID

   20 asignacion_var: IGUAL expresion
   21               | dimension_arreglo
   22               | /* empty */

   23 $@6: /* empty */

   24 dimension_arreglo: CORCHETE_ABIERTO CTE_INTEGER $@6 CORCHETE_CERRADO

   25 $@7: /* empty */

   26 $@8: /* empty */

   27 dimension_arreglo: CORCHETE_ABIERTO CTE_INTEGER $@7 COMA CTE_INTEGER $@8 CORCHETE_CERRADO

   28 expresion: exp
   29          | exp operador_logico exp

   30 funcion_matematica: math_choices PAR_ABIERTO exp PAR_CERRADO

   31 math_choices: ABS
   32             | COS
   33             | SIN
   34             | LOG
   35             | TAN
   36             | SQRT

   37 operador_logico: AND
   38                | OR
   39                | MAYOR_QUE
   40                | MENOR_QUE
   41                | DIFERENTE
   42                | IGUAL_IGUAL
   43                | /* empty */

   44 exp: termino

   45 $@9: /* empty */

   46 exp: termino MAS $@9 exp

   47 $@10: /* empty */

   48 exp: termino MENOS $@10 exp

   49 termino: exponencial
   50        | exponencial POR exp
   51        | exponencial DIVISION exp

   52 exponencial: factor
   53            | factor EXPONENCIAL exp

   54 factor: var
   55       | PAR_ABIERTO expresion PAR_CERRADO
   56       | MAS CTE_INTEGER
   57       | MENOS CTE_INTEGER
   58       | factor_alterno

   59 factor_alterno: factor_alterno_choices

   60 factor_alterno_choices: llamado
   61                       | funcion_matematica
   62                       | ID CORCHETE_ABIERTO exp CORCHETE_CERRADO

   63 var: ID
   64    | CTE_INTEGER
   65    | CTE_STRING
   66    | CTE_DECIMAL
   67    | VERDADERO
   68    | FALSO

   69 metodo: metodo metodo_def
   70       | /* empty */

   71 $@11: /* empty */

   72 $@12: /* empty */

   73 metodo_main: METHOD VOID MAIN $@11 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@12 END METHOD

   74 $@13: /* empty */

   75 $@14: /* empty */

   76 $@15: /* empty */

   77 metodo_def: METHOD tipo $@13 ID $@14 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@15 RETURN expresion PUNTO END METHOD

   78 metodo_body: metodo_body body_code
   79            | /* empty */

   80 parametros: parametros_def

   81 $@16: /* empty */

   82 parametros_def: tipo $@16 params parametros_extra
   83               | /* empty */

   84 parametros_extra: COMA parametros_def
   85                 | /* empty */

   86 body_code: vars_def
   87          | asignacion
   88          | estatuto
   89          | llamado PUNTO
   90          | default_functions

   91 llamado: ID PAR_ABIERTO exp PAR_CERRADO

   92 $@17: /* empty */

   93 $@18: /* empty */

   94 $@19: /* empty */

   95 asignacion: ID $@17 IGUAL $@18 expresion $@19 PUNTO
   96           | array_assignment

   97 array_assignment: ID CORCHETE_ABIERTO exp CORCHETE_CERRADO IGUAL expresion PUNTO
   98                 | ID CORCHETE_ABIERTO exp COMA exp CORCHETE_CERRADO IGUAL expresion PUNTO

   99 estatuto: if_statement
  100         | for_statement
  101         | while_statement
  102         | select_statement

  103 if_statement: IF PAR_ABIERTO expresion PAR_CERRADO DOS_PUNTOS metodo_body ELSE DOS_PUNTOS metodo_body END IF

  104 for_statement: FOR ID IGUAL exp TO exp for_step END FOR

  105 for_step: DOS_PUNTOS metodo_body
  106         | STEP exp DOS_PUNTOS metodo_body

  107 while_statement: WHILE PAR_ABIERTO expresion PAR_CERRADO DOS_PUNTOS metodo_body END WHILE

  108 select_statement: SELECT ID DOS_PUNTOS CASE DEFAULT DOS_PUNTOS metodo_body END CASE case_statement END SELECT

  109 case_statement: case_statement_def case_statement
  110               | /* empty */

  111 case_statement_def: CASE CTE_INTEGER DOS_PUNTOS metodo_body END CASE

  112 default_functions: default_choices PAR_ABIERTO default_function_input_def default_function_input PAR_CERRADO PUNTO
  113                  | read

  114 read: READ PAR_ABIERTO ID ids PAR_CERRADO PUNTO

  115 ids: ids_def ids
  116    | /* empty */

  117 ids_def: COMA ID

  118 default_function_input: MAS default_function_input_def default_function_input
  119                       | /* empty */

  120 default_function_input_def: expresion
  121                           | COMILLAS CTE_STRING COMILLAS

  122 default_choices: PRINT
  123                | PRINTLINE


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 3
METHOD (259) 73 77
PRINT (260) 122
PRINTLINE (261) 123
READ (262) 114
CASE (263) 108 111
DEFAULT (264) 108
DEFINE (265) 8
AS (266) 8
TO (267) 104
STEP (268) 106
INTEGER (269) 15
DECIMAL (270) 18
MAIN (271) 73
STRING (272) 16
BOOLEAN (273) 17
END (274) 3 73 77 103 104 107 108 111
FALSO (275) 68
VERDADERO (276) 67
VOID (277) 19 73
RETURN (278) 77
AND (279) 37
OR (280) 38
ABS (281) 31
COS (282) 32
SIN (283) 33
LOG (284) 34
TAN (285) 35
SQRT (286) 36
FOR (287) 104
WHILE (288) 107
IF (289) 103
SELECT (290) 108
ELSE (291) 103
PAR_ABIERTO (292) 30 55 73 77 91 103 107 112 114
PAR_CERRADO (293) 30 55 73 77 91 103 107 112 114
COMA (294) 27 84 98 117
DOS_PUNTOS (295) 3 73 77 103 105 106 107 108 111
CORCHETE_ABIERTO (296) 24 27 62 97 98
CORCHETE_CERRADO (297) 24 27 62 97 98
IGUAL (298) 20 95 97 98 104
IGUAL_IGUAL (299) 42
MENOR_QUE (300) 40
MAYOR_QUE (301) 39
DIFERENTE (302) 41
POR (303) 50
MAS (304) 46 56 118
MENOS (305) 48 57
DIVISION (306) 51
EXPONENCIAL (307) 53
PUNTO (308) 8 77 89 95 97 98 112 114
APUNTADOR (309) 9 11
COMILLAS (310) 121
ID (311) 3 9 10 11 12 14 62 63 77 91 95 97 98 104 108 114 117
CTE_STRING (312) 65 121
CTE_DECIMAL (313) 66
CTE_INTEGER (314) 24 27 56 57 64 111


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
tlaloc (61)
    on left: 3, on right: 0
$@1 (62)
    on left: 1, on right: 3
$@2 (63)
    on left: 2, on right: 3
vars (64)
    on left: 4 5, on right: 3 4
vars_def (65)
    on left: 8, on right: 4 86
$@3 (66)
    on left: 6, on right: 8
$@4 (67)
    on left: 7, on right: 8
declaracion (68)
    on left: 9 10, on right: 8
params (69)
    on left: 11 12 14, on right: 82
$@5 (70)
    on left: 13, on right: 14
tipo (71)
    on left: 15 16 17 18 19, on right: 8 77 82
asignacion_var (72)
    on left: 20 21 22, on right: 8
dimension_arreglo (73)
    on left: 24 27, on right: 14 21
$@6 (74)
    on left: 23, on right: 24
$@7 (75)
    on left: 25, on right: 27
$@8 (76)
    on left: 26, on right: 27
expresion (77)
    on left: 28 29, on right: 20 55 77 95 97 98 103 107 120
funcion_matematica (78)
    on left: 30, on right: 61
math_choices (79)
    on left: 31 32 33 34 35 36, on right: 30
operador_logico (80)
    on left: 37 38 39 40 41 42 43, on right: 29
exp (81)
    on left: 44 46 48, on right: 28 29 30 46 48 50 51 53 62 91 97 98
    104 106
$@9 (82)
    on left: 45, on right: 46
$@10 (83)
    on left: 47, on right: 48
termino (84)
    on left: 49 50 51, on right: 44 46 48
exponencial (85)
    on left: 52 53, on right: 49 50 51
factor (86)
    on left: 54 55 56 57 58, on right: 52 53
factor_alterno (87)
    on left: 59, on right: 58
factor_alterno_choices (88)
    on left: 60 61 62, on right: 59
var (89)
    on left: 63 64 65 66 67 68, on right: 54
metodo (90)
    on left: 69 70, on right: 3 69
metodo_main (91)
    on left: 73, on right: 3
$@11 (92)
    on left: 71, on right: 73
$@12 (93)
    on left: 72, on right: 73
metodo_def (94)
    on left: 77, on right: 69
$@13 (95)
    on left: 74, on right: 77
$@14 (96)
    on left: 75, on right: 77
$@15 (97)
    on left: 76, on right: 77
metodo_body (98)
    on left: 78 79, on right: 73 77 78 103 105 106 107 108 111
parametros (99)
    on left: 80, on right: 73 77
parametros_def (100)
    on left: 82 83, on right: 80 84
$@16 (101)
    on left: 81, on right: 82
parametros_extra (102)
    on left: 84 85, on right: 82
body_code (103)
    on left: 86 87 88 89 90, on right: 78
llamado (104)
    on left: 91, on right: 60 89
asignacion (105)
    on left: 95 96, on right: 87
$@17 (106)
    on left: 92, on right: 95
$@18 (107)
    on left: 93, on right: 95
$@19 (108)
    on left: 94, on right: 95
array_assignment (109)
    on left: 97 98, on right: 96
estatuto (110)
    on left: 99 100 101 102, on right: 88
if_statement (111)
    on left: 103, on right: 99
for_statement (112)
    on left: 104, on right: 100
for_step (113)
    on left: 105 106, on right: 104
while_statement (114)
    on left: 107, on right: 101
select_statement (115)
    on left: 108, on right: 102
case_statement (116)
    on left: 109 110, on right: 108 109
case_statement_def (117)
    on left: 111, on right: 109
default_functions (118)
    on left: 112 113, on right: 90
read (119)
    on left: 114, on right: 113
ids (120)
    on left: 115 116, on right: 114 115
ids_def (121)
    on left: 117, on right: 115
default_function_input (122)
    on left: 118 119, on right: 112 118
default_function_input_def (123)
    on left: 120 121, on right: 112 118
default_choices (124)
    on left: 122 123, on right: 112


state 0

    0 $accept: . tlaloc $end
    3 tlaloc: . PROGRAM ID $@1 DOS_PUNTOS vars $@2 metodo metodo_main END PROGRAM

    PROGRAM  shift, and go to state 1

    tlaloc  go to state 2


state 1

    3 tlaloc: PROGRAM . ID $@1 DOS_PUNTOS vars $@2 metodo metodo_main END PROGRAM

    ID  shift, and go to state 3


state 2

    0 $accept: tlaloc . $end

    $end  shift, and go to state 4


state 3

    1 $@1: .
    3 tlaloc: PROGRAM ID . $@1 DOS_PUNTOS vars $@2 metodo metodo_main END PROGRAM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


state 4

    0 $accept: tlaloc $end .

    $default  accept


state 5

    3 tlaloc: PROGRAM ID $@1 . DOS_PUNTOS vars $@2 metodo metodo_main END PROGRAM

    DOS_PUNTOS  shift, and go to state 6


state 6

    3 tlaloc: PROGRAM ID $@1 DOS_PUNTOS . vars $@2 metodo metodo_main END PROGRAM
    4 vars: . vars vars_def
    5     | .

    $default  reduce using rule 5 (vars)

    vars  go to state 7


state 7

    2 $@2: .  [METHOD]
    3 tlaloc: PROGRAM ID $@1 DOS_PUNTOS vars . $@2 metodo metodo_main END PROGRAM
    4 vars: vars . vars_def
    8 vars_def: . DEFINE declaracion $@3 AS tipo $@4 asignacion_var PUNTO

    DEFINE  shift, and go to state 8

    $default  reduce using rule 2 ($@2)

    $@2       go to state 9
    vars_def  go to state 10


state 8

    8 vars_def: DEFINE . declaracion $@3 AS tipo $@4 asignacion_var PUNTO
    9 declaracion: . APUNTADOR ID
   10            | . ID

    APUNTADOR  shift, and go to state 11
    ID         shift, and go to state 12

    declaracion  go to state 13


state 9

    3 tlaloc: PROGRAM ID $@1 DOS_PUNTOS vars $@2 . metodo metodo_main END PROGRAM
   69 metodo: . metodo metodo_def
   70       | .

    $default  reduce using rule 70 (metodo)

    metodo  go to state 14


state 10

    4 vars: vars vars_def .

    $default  reduce using rule 4 (vars)


state 11

    9 declaracion: APUNTADOR . ID

    ID  shift, and go to state 15


state 12

   10 declaracion: ID .

    $default  reduce using rule 10 (declaracion)


state 13

    6 $@3: .
    8 vars_def: DEFINE declaracion . $@3 AS tipo $@4 asignacion_var PUNTO

    $default  reduce using rule 6 ($@3)

    $@3  go to state 16


state 14

    3 tlaloc: PROGRAM ID $@1 DOS_PUNTOS vars $@2 metodo . metodo_main END PROGRAM
   69 metodo: metodo . metodo_def
   73 metodo_main: . METHOD VOID MAIN $@11 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@12 END METHOD
   77 metodo_def: . METHOD tipo $@13 ID $@14 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@15 RETURN expresion PUNTO END METHOD

    METHOD  shift, and go to state 17

    metodo_main  go to state 18
    metodo_def   go to state 19


state 15

    9 declaracion: APUNTADOR ID .

    $default  reduce using rule 9 (declaracion)


state 16

    8 vars_def: DEFINE declaracion $@3 . AS tipo $@4 asignacion_var PUNTO

    AS  shift, and go to state 20


state 17

   15 tipo: . INTEGER
   16     | . STRING
   17     | . BOOLEAN
   18     | . DECIMAL
   19     | . VOID
   73 metodo_main: METHOD . VOID MAIN $@11 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@12 END METHOD
   77 metodo_def: METHOD . tipo $@13 ID $@14 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@15 RETURN expresion PUNTO END METHOD

    INTEGER  shift, and go to state 21
    DECIMAL  shift, and go to state 22
    STRING   shift, and go to state 23
    BOOLEAN  shift, and go to state 24
    VOID     shift, and go to state 25

    tipo  go to state 26


state 18

    3 tlaloc: PROGRAM ID $@1 DOS_PUNTOS vars $@2 metodo metodo_main . END PROGRAM

    END  shift, and go to state 27


state 19

   69 metodo: metodo metodo_def .

    $default  reduce using rule 69 (metodo)


state 20

    8 vars_def: DEFINE declaracion $@3 AS . tipo $@4 asignacion_var PUNTO
   15 tipo: . INTEGER
   16     | . STRING
   17     | . BOOLEAN
   18     | . DECIMAL
   19     | . VOID

    INTEGER  shift, and go to state 21
    DECIMAL  shift, and go to state 22
    STRING   shift, and go to state 23
    BOOLEAN  shift, and go to state 24
    VOID     shift, and go to state 28

    tipo  go to state 29


state 21

   15 tipo: INTEGER .

    $default  reduce using rule 15 (tipo)


state 22

   18 tipo: DECIMAL .

    $default  reduce using rule 18 (tipo)


state 23

   16 tipo: STRING .

    $default  reduce using rule 16 (tipo)


state 24

   17 tipo: BOOLEAN .

    $default  reduce using rule 17 (tipo)


state 25

   19 tipo: VOID .  [ID]
   73 metodo_main: METHOD VOID . MAIN $@11 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@12 END METHOD

    MAIN  shift, and go to state 30

    $default  reduce using rule 19 (tipo)


state 26

   74 $@13: .
   77 metodo_def: METHOD tipo . $@13 ID $@14 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@15 RETURN expresion PUNTO END METHOD

    $default  reduce using rule 74 ($@13)

    $@13  go to state 31


state 27

    3 tlaloc: PROGRAM ID $@1 DOS_PUNTOS vars $@2 metodo metodo_main END . PROGRAM

    PROGRAM  shift, and go to state 32


state 28

   19 tipo: VOID .

    $default  reduce using rule 19 (tipo)


state 29

    7 $@4: .
    8 vars_def: DEFINE declaracion $@3 AS tipo . $@4 asignacion_var PUNTO

    $default  reduce using rule 7 ($@4)

    $@4  go to state 33


state 30

   71 $@11: .
   73 metodo_main: METHOD VOID MAIN . $@11 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@12 END METHOD

    $default  reduce using rule 71 ($@11)

    $@11  go to state 34


state 31

   77 metodo_def: METHOD tipo $@13 . ID $@14 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@15 RETURN expresion PUNTO END METHOD

    ID  shift, and go to state 35


state 32

    3 tlaloc: PROGRAM ID $@1 DOS_PUNTOS vars $@2 metodo metodo_main END PROGRAM .

    $default  reduce using rule 3 (tlaloc)


state 33

    8 vars_def: DEFINE declaracion $@3 AS tipo $@4 . asignacion_var PUNTO
   20 asignacion_var: . IGUAL expresion
   21               | . dimension_arreglo
   22               | .  [PUNTO]
   24 dimension_arreglo: . CORCHETE_ABIERTO CTE_INTEGER $@6 CORCHETE_CERRADO
   27                  | . CORCHETE_ABIERTO CTE_INTEGER $@7 COMA CTE_INTEGER $@8 CORCHETE_CERRADO

    CORCHETE_ABIERTO  shift, and go to state 36
    IGUAL             shift, and go to state 37

    $default  reduce using rule 22 (asignacion_var)

    asignacion_var     go to state 38
    dimension_arreglo  go to state 39


state 34

   73 metodo_main: METHOD VOID MAIN $@11 . PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@12 END METHOD

    PAR_ABIERTO  shift, and go to state 40


state 35

   75 $@14: .
   77 metodo_def: METHOD tipo $@13 ID . $@14 PAR_ABIERTO parametros PAR_CERRADO DOS_PUNTOS metodo_body $@15 RETURN expresion PUNTO END METHOD

    $default  reduce using rule 75 ($@14)

    $@14  go to state 41


state 36

   24 dimension_arreglo: CORCHETE_ABIERTO . CTE_INTEGER $@6 CORCHETE_CERRADO
   27                  | CORCHETE_ABIERTO . CTE_INTEGER $@7 COMA CTE_INTEGER $@8 CORCHETE_CERRADO

    CTE_INTEGER  shift, and go to state 42


state 37

   20 asignacion_var: IGUAL . expresion
   28 expresion: . exp
   29          | . exp operador_logico exp
   30 funcion_matematica: . math_choices PAR_ABIERTO exp PAR_CERRADO
   31 math_choices: . ABS
   32             | . COS
   33             | . SIN
   34             | . LOG
   35             | . TAN
   36             | . SQRT
   44 exp: . termino
   46    | . termino MAS $@9 exp
   48    | . termino MENOS $@10 exp
   49 termino: . exponencial
   50        | . exponencial POR exp
   51        | . exponencial DIVISION exp
   52 exponencial: . factor
   53            | . factor EXPONENCIAL exp
   54 factor: . var
   55       | . PAR_ABIERTO expresion PAR_CERRADO
   56       | . MAS CTE_INTEGER
   57       | . MENOS CTE_INTEGER
   58       | . factor_alterno
   59 factor_alterno: . factor_alterno_choices
   60 factor_alterno_choices: . llamado
   61                       | . funcion_matematica
   62                       | . ID CORCHETE_ABIERTO exp CORCHETE_CERRADO
   63 var: . ID
   64    | . CTE_INTEGER
   65    | . CTE_STRING
   66    | . CTE_DECIMAL
   67    | . VERDADERO
   68    | . FALSO
   91 llamado: . ID PAR_ABIERTO exp PAR_CERRADO

    FALSO        shift, and go to state 43
    VERDADERO    shift, and go to state 44
    ABS          shift, and go to state 45
    COS          shift, and go to state 46
    SIN          shift, and go to state 47
    LOG          shift, and go to state 48
    TAN          shift, and go to state 49
    SQRT         shift, and go to state 50
    PAR_ABIERTO  shift, and go to state 51
    MAS          shift, and go to state 52
    MENOS        shift, and go to state 53
    ID           shift, and go to state 54
    CTE_STRING   shift, and go to state 55
    CTE_DECIMAL  shift, and go to state 56
    CTE_INTEGER  shift, and go to state 57

    expresion               go to state 58
    funcion_matematica      go to state 59
    math_choices            go to state 60
    exp                     go to state 61
    termino                 go to state 62
    exponencial             go to state 63
    factor                  go to state 64
    factor_alterno          go to state 65
    factor_alterno_choices  go to state 66
    var                     go to state 67
    llamado                 go to state 68


state 38

    8 vars_def: DEFINE declaracion $@3 AS tipo $@4 asignacion_var . PUNTO

    PUNTO  shift, and go to state 69


state 39

   21 asignacion_var: dimension_arreglo .

    $default  reduce using rule 21 (asignacion_var)


state 40
